--- a/apps/chuck/css/main.css
+++ b/apps/chuck/css/main.css
@@ -16,12 +16,16 @@
 }
 
 .title {
+  position: absolute;
+  width : 100%;
+  top : 0;
   margin: auto;
   background-color: rgba(0,0,0,0.1);
   text-align: center;
   padding : 20px 0;
   font-size: 3rem;
 }
+
 .content-wrapper {
   position: absolute;
   top : 25%;
@@ -40,20 +44,21 @@
   color : rgba(0,0,0,0.75);
   text-align: center;
 }
+
 .bottom {
   width : 100%;
 }
+
 .m-10 {
   margin : 20px auto;
 }
+
 .content-wrapper h1, .content-wrapper p, .content-wrapper button {
   font-size: 3rem;
 }
 
 .top button {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   padding : 10px;
   border : 1px solid rgba(0,0,0,0.5);
   border-radius: 5px;
@@ -82,11 +87,21 @@
   box-shadow : 0px 0px 10px 10px lightblue inset;
 }
 
+.buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+.save-joke {
+  padding : 20px;
+  align-self: center;
+}
 
 @media only screen and (max-width: 800px) {
   * {
     overflow-x: hidden;
   }
+
   .title {
     margin: auto;
     background-color: rgba(0,0,0,0.1);
@@ -94,6 +109,7 @@
     padding : 20px 0;
     font-size: 2rem;
   }
+
   .content-wrapper {
     position: relative;
     top : 0;
@@ -105,9 +121,11 @@
     margin: auto;
     font-size : 1rem;
   }
+
   .content-wrapper h1, .content-wrapper p, .content-wrapper button {
     font-size: 2rem;
   }
+  
   #joke {
     width : 80%;
     margin : auto;
