--- a/css/index.css
+++ b/css/index.css
@@ -157,10 +157,14 @@ body {
   background-color: powderblue;
 }
 
+
+
 .full {
   width : 75%;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .half {
@@ -184,6 +188,36 @@ body {
   flex-direction: column;
 }
 
+.games-link {
+  width: 50%;
+  color : rgba(0, 0, 0, 0.85);
+  text-decoration: none;
+  padding : 0.5rem;
+  transition: all 0.3s ease;
+  border : 1px solid rgba(0,0,0,0.85);
+}
+
+.games-link:hover {
+  background-color: rgba(147, 147, 147, 0.85);
+  color : rgba(71, 71, 71, 0.85);
+  text-shadow: 0rem -0.5rem 0.2rem rgba(255,255,255,0.15);
+}
+
+
+
+.itch {
+  display : flex;
+  flex-direction: column;
+  width : 100%;
+  justify-content: center;
+  align-items: center;
+  padding : 2rem;
+}
+
+.itch>.games-link {
+  margin : 1rem;
+  padding : 2rem !important;
+}
 #web {
   background-image: url('../img/webdev.png');
   background-attachment: fixed;
