--- a/css/index.css
+++ b/css/index.css
@@ -37,19 +37,33 @@ body {
 }
 
 #hc {
-  width : 20%;
+  display: flex;
+  flex-direction: column;
+  width : 10%;
   justify-content: flex-start;
+
+}
+
+#hc>a>img {
+  vertical-align: middle;
+  width: 25px;
+  height : 25px;
+  border-radius: 50%;
+  border : 1px solid black;
+  margin-right : 1rem;
 }
 
 #navbar {
-  width : 80%;
+  width : 90%;
   justify-content: flex-end;
+  
 }
 
 .banner-elements {
   display: flex;
   flex-direction: row;
   background-color: rgba(255,255,255,0.15);
+  
 }
 
 .banner-links a {
